--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ description: > # this means to ignore newlines until "baseurl:"
   开轩揽物华
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: null
+qq号: 1870996445
 github_username:  kongqiahaha
 
 # Build settings
